--- a/term-paper-template-master/tex/seminararbeit.tex
+++ b/term-paper-template-master/tex/seminararbeit.tex
@@ -86,7 +86,7 @@ Dieses Verfahren wird in Abbildung \ref{fig_Decrypter} gezeigt.
  
 Malware stellt wegen all dieser Verschleierungsmechanismen eine immer größer werdende Bedrohung dar und durch den rasanten Wachstum des Smartphone-Marktes ist eine manuelle Auswertung mittlerweile unmöglich geworden. Obwohl es sich bei vielen neuen Arten um verschiedene Varianten bereits bekannter Malware handelt, müssen Analysten erst jedes Sample erneut analysieren um dies feststellen zu können \cite{trinius2010visualisierung}. Bei der Analyse kann grundsätzlich in zwei Arten unterschieden werden: Statische und Dynamische Analyse (siehe Kapitel \ref{sec:Statische Analyse} und \ref{sec:Dynamische Analyse}).
 
-
+\section{Ansätze zur Merkmalsgenerierung}
 \subsection{Dynamische Analyse} \label{sec:Dynamische Analyse}
 Bei der dynamischen Analyse wird das Programm während der Laufzeit untersucht. Der Ablauf besteht dabei aus drei Teilen: der Ausführung des Programms, der Protokollierung des Ablaufes und der Ergebnisse und das Analysieren dieser \cite{dynamische_analyse}. Ein Beispiel der dynamischen Analysemethoden ist das Testen. Ein bedeutender Nachteil ist es, dass nicht immer alle Eingabeparameter überprüft werden können da diese exponentiell mit der Anzahl der Parameter steigt. Daher werden oft nur Rand- und Grenzfälle geprüft. Weitere Probleme können bei der Netzkommunikation, der Erstellung von Zufallszahlen wie auch bei Nutzereingaben auftreten. Wegen all dieser Eigenschaften eines Programmes ist eine Reproduzierbarkeit der Ergebnisse nicht gegeben. Zudem gibt es die Möglichkeit für Malware während Laufzeit zu erkennen, ob sie überprüft wird und kann sich gegebenenfalls zu diesem Zeitpunkt harmlos verhalten. Viele dieser Nachteile lassen sich durch eine statische Analyse vermeiden welche im  Abschnitt \ref{sec:Statische Analyse} vorgestellt wird.
 
@@ -112,7 +112,7 @@ Wie man in Abbildung \ref{fig_Kontrollflussgraph} sehen kann, wird für jede Anw
 Bei der Datenflussanalyse wird untersucht, welche Teiles des Programmes welche Daten weitergeben und welche Abhängigkeiten daraus resultieren. Als Grundlage dieser Methode wird ein Kontrollflussgraph aus Kapitel \ref{sec:Kontrollflussanalyse} verwendet. Die Datenflussanalyse untersucht, wie sich Daten durch die einzelnen Blöcke verändern. Enthält ein Block beispielsweise den Code x=1, so verändert sich der Wert von x nach dem Block auf 1. Diese gesamten Änderungen jedes Blocks werden überwacht und aufgezeichnet. \cite{7365827}
 
 \subsection{Gegenüberstellung von statischer und dynamischer Analyse}
-Durch eine dynamische Analyse können durch die Ausführung des Programmes konkrete Fehler gefunden werden, allerdings kann durch diese Methode nicht die Fehlerfreiheit des Programmes bewiesen werden, da das Programm meistens nicht mit allen Parametern gestartet und durchgeführt werden kann. Bei der statischen Analyse kann das Ausführen des Programmes mit allen möglichen Parametern betrachtet werden. Somit kann bewiesen werden, dass bestimmte Fehlerarten nicht auftreten können. Allerdings können Fehler auftreten welche durch das Fehlen entfernter Zusammenhänge entstehen. Beide Analysemethoden haben Vor- und Nachteile, ergänzen sich allerdings gegenseitig gut, daher sollten beide Methoden zusammen verwendet werden. \cite{ernst2003static}
+Durch eine dynamische Analyse können durch die Ausführung des Programmes konkrete Fehler gefunden werden, allerdings kann durch diese Methode nicht die Fehlerfreiheit des Programmes bewiesen werden, da das Programm meistens nicht mit allen Parametern gestartet und durchgeführt werden kann. Bei der statischen Analyse kann das Ausführen des Programmes mit allen möglichen Parametern betrachtet werden. Somit kann bewiesen werden, dass bestimmte Fehlerarten nicht auftreten können. Allerdings können Fehler auftreten welche durch das Fehlen entfernter Zusammenhänge entstehen. Zudem ist das Untersuchen mit dem statischen Ansatz Ungefährlich, da das Programm nicht laufen muss. Beide Analysemethoden haben Vor- und Nachteile, ergänzen sich allerdings gegenseitig gut, daher sollten beide Methoden zusammen verwendet werden. \cite{ernst2003static}
 
 \section{Erkennungsmechanismen}
 
@@ -132,7 +132,12 @@ Damit sich ein Virus verbreiten kann, muss er sich in andere Daten hineinkopiere
 \subsection{Behavior Blocker}
 Beim Behavior-Blocking werden Dateiaktivitäten und deren Verhalten überwacht. Zuerst wird festgelegt welche Aktionen und Änderungen an Dateien erlaubt und welche verboten sind. Anschließen kann so überwacht werden, welches Programm gegen diese fest gelegten Regeln verstößt. Obwohl dies komplett in Echtzeit geschieht, kann bei einer Verhaltensanomalie nicht festgestellt werden, ob es sich tatsächlich um Malware handelt oder nur um eine ungewöhnliche, aber zulässige Aktion.\cite{Lehner2006} Vorteil dabei ist, dass unerlaubte Zugriffe sofort blockiert werden und somit keinen Schaden angerichtet werden kann. Nachteil dabei ist, dass viele nützliche Programme ebenfalls blockiert werden. Die Auswahl liegt also beim Nutzer, welche Aktionen er zulässt und welche nicht. \cite{behavior-blocker}
 
-\subsubsection{Taint Analysis}
+\subsection{Heuristische Analysis}
+Die heuristische Analyse ähnelt sehr dem signaturbasiertem Ansatz, aber im Gegensatz wird nicht nach einzigartigen Signaturen gesucht, sondern es werden Funktion- und Prozessaufrufen des Betriebssystem auf bestimmte Verhaltensmuster untersucht.
+Dabei gibt es zwei verschieden Ansätze der heuristische Analyse, die statische und die dynamische Analyse. Bei der statischen Heuristik wird wie auch bei dem signaturbasiertem Ansatz nach Byte-Folgen im Quellcode gesucht, allerdings ist hier der entscheidende Unterschied, dass hier nach bestimmten Abfolgen von Instruktionen gesucht wird. Die Byte-Folge setzt sich somit aus bestimmten Instruktionen zusammen und diese beschreibt dann das  Verhalten des Programmes. Zudem wird untersucht, ob verschlüsselte Malware bestimmte Systemfunktionen aufruft, um den eigenen Programmcode zu entschlüsseln. Durch diese Technik wird, wie alle bei jeder signaturbasierten Analyse, nur bereits bekannte oder verwandte Malware gefunden. Auch bei verschleierter Malware, wie bei polymorpher oder
+metamorpher Malware \ref{sec:Malware} versagt die statische heuristische Analyse. Bei der dynamischen Heuristik wird das zu untersuchende Programm in einer virtuellen Umgebung gestartet. Dadurch können z.B. z.B. alle Interrupt- Aufrufe, die das verdächtige Programm an das Betriebssystem schickt überwacht und erfasst werden. Es wird erlaubt, dass sich das Programm frei im emulierten Raum bewegen kann. Somit wird spätesten bei der kommunikation mit dem Betriebssystem klar, welche Absichten das Programm hat. Zudem können alle Schritte des Programmes überwacht werden, wie z.B. die Entschlüsselungsschritte. Zudem kann der entschlüsselte Quellcode des Programmes betrachtet werden. Durch dieses Verfahren kann somit auch noch unbekannte Malware gefunden werden. Da alles in einer simulierten Umgebung läuft, kann das infizierte Programm auch keine Schäden anrichten. Ein großer Nachteil dabei ist allerdings, dass diese Methode sehr Zeit intensiv ist. \cite{Lehner2006}
+
+
 
 \section{Bouncer} \label{sec:Bouncer}
 
