--- a/term-paper-template-master/tex/literatur.bib
+++ b/term-paper-template-master/tex/literatur.bib
@@ -291,3 +291,9 @@ month={Oct}
   howpublished = {\url{https://www1.informatik.uni-erlangen.de/filepool/projects/openc3s/mm-Malware.pdf}},
   note = {Accessed: 2018-05-31}
 }
+
+@misc{flowdroid,
+  title = {FlowDroid – Taint Analysis},
+  howpublished = {\url{https://blogs.uni-paderborn.de/sse/tools/flowdroid/}},
+  note = {Accessed: 2018-05-31}
+}
