--- a/term-paper-template-master/tex/seminararbeit.tex
+++ b/term-paper-template-master/tex/seminararbeit.tex
@@ -14,19 +14,21 @@ werden?}
 
 % Kurze Zusammenfassung des Dokuments
 \begin{abstract}
-An dieser Stelle steht eine kurze Zusammenfassung des Inhaltes des Dokuments.
+Mit der wachsenden Beliebtheit der auf Android basierten Smartphones wächst zunehmend die Anzahl der dazu gehörigen Apps im Google Play Store. Das Tempo indem dort Apps hochgeladen werden steigt rasant und hat eine manuelle Überprüfung dieser schon längst unmöglich gemacht. Durch das einbinden von Smarphones in kommerzielle Geschäfte macht diese auch in Zukunft zu attraktiven Zielen von schädlicher Software. Malware Entwickler kreieren immer komplexere und ausgefallenere Verschleierungsmechanisem um ihre Software für Virenprogramme unauffindbar zu machen. In diesem Paper werden diese Verschleierungsmechanisem erläutert und Ansätze um diese so gut es geht aufzudecken.
 \end{abstract}
 
 \tableofcontents
 
 \section{Einleitung}
-Smartphones bieten aufgrund ihrer vielen Schittstellen zur Außenwelt, wie z.B. WLAN, Bluetooth, NFC, USB usw. viele Angriffspunkte. Ein Hauptgrund, warum Smartphones mit dem Android Betriebssystem so beliebt für Angreifer sind, ist der hohe Verbreitungsgrad dieser Geräte. Dieser liegt im Jahr 2018 bei ca. 86 Prozent und ist somit Sechs mal so hoch wie der Konkurrent IOS mit knapp 16 Prozent Marktanteil \cite{AndoidMarktanteil}.
-Da Malware-Autoren immer mehr auf Verschleierungsmechanismen wie Komprimierung, Verschlüsselung oder sich selbst modifizierender Programmcode setzten, wird es für Antiviren Herstellern zunehmend schwieriger diese als schädliche Software zu erkennen \cite{Lehner2006}.
+Smartphones bieten aufgrund ihrer vielen Schittstellen zur Außenwelt, wie z.B. WLAN, Bluetooth, NFC, USB usw. viele Angriffspunkte. Ein Hauptgrund, warum Smartphones mit dem Android Betriebssystem so beliebt für Angreifer sind, ist der hohe Verbreitungsgrad dieser Geräte. Dieser liegt im Jahr 2018 bei ca. 86 Prozent und ist somit Sechs mal so hoch wie der Konkurrent IOS mit knapp 16 Prozent Marktanteil \cite{AndoidMarktanteil}. Zudem werden Smartphones zunehmend in kommerzielle Geschäfte eingebunden, dies macht Smartphones auch zukünftig als Ziel für Attacken sehr attraktiv. Da Malware-Autoren immer mehr auf Verschleierungsmechanismen wie Komprimierung, Verschlüsselung oder sich selbst modifizierender Programmcode setzten und diese sich stetig weiter entwickeln, wird es für Antiviren Herstellern zunehmend schwieriger diese als schädliche Software zu erkennen \cite{Lehner2006}.
 
 \section{Grundlagen}
 
 \subsection{Was ist Android?}
-Das Betriebssystem Android ist eine umfassende Open Source Plattform für Smartphones. Eigentümer des Android Betriebssystem ist die Open Handset Alliance, welches ein Konsortium von 84 Unternehmen ist, Ihr Ziel ist es "eine beschleunigte Innovation im Mobilbereich, um dem Benutzer ein reicheres, kostengünstigeres und besseres Mobilerlebnis zu bieten" \cite{gargenta2011einfuhrung}. Die Android Architektur besteht aus insgesamt fünf Schichten, dem Linux Kernel, Bibliotheken, Android-Laufzeitumgebung, Application-Frameworks und auf der obersten Schicht die Anwendungen. 
+Das Betriebssystem Android ist eine umfassende Open Source Plattform für Smartphones. Eigentümer des Android Betriebssystem ist die Open Handset Alliance, welches ein Konsortium von 84 Unternehmen ist, Ihr Ziel ist es "eine beschleunigte Innovation im Mobilbereich, um dem Benutzer ein reicheres, kostengünstigeres und besseres Mobilerlebnis zu bieten" \cite{gargenta2011einfuhrung}. Erstmalig gibt es eine wirklich offene Plattform, welche Hardware und Software von Smartphones trennt. Weil Android unter der Apache Open-Source Lizenz freigegeben ist und das Betriebssystem auf dem Linux-Kernel basiert, können Hersteller das Android Betriebssystem beliebig verwenden und für ihre Produkte anpassen. Als Einsatzgebiete für Android gibt es Smartphones, Tablets, Notebooks aber auch in z.B. Autos kommt das Betriebssystem zum Einsatz.
+
+\subsection{Android Architektur}
+Die Android Architektur basiert auf dem Vier-Schichtenmodell, erstens dem Linux Kernel mit den dazu gehörigen Hardwaretreibern, zweitens der Android Runtime mit der Dalvik Virtual Machine und  den Java Core Libraries sowie den Standard-Bibliotheken , drittens dem Application Framework und auf der obersten Schicht den eigentlichen Anwendungen.
 
 \begin{figure}[!ht]
 \centering
@@ -35,7 +37,7 @@ Das Betriebssystem Android ist eine umfassende Open Source Plattform für Smartp
 \label{fig_Android}
 \end{figure}
 
-Weil Android unter der Apache Open-Source Lizenz freigegeben ist und das Betriebssystem auf dem Linux-Kernel basiert, können Hersteller das Android Betriebssystem beliebig verwenden und für ihre Produkte anpassen. Zudem dient der Linux-Kernel als eine Abstraktion zwischen Software und Hardware und somit kann Android auf verschiedenen Geräten eingesetzt werden. Aufgrund der Tatsache, dass Linux über ein etabliertes Sicherheitskonzept verfügt \cite{LinuxSicherheitskonzept}, greift Android auf viele Schutzmechanismen des Linux Kernels zurück oder benutzt diese als ihre Basis\cite{scheid2012kapitel}. Zudem verwendet Android viele von Linux mitgebrachten Funktionen wie z.B. die Unterstüzung für Speicherverwaltung, Power-Management und Netzwerkzugriff. Wie man in Abbildung \ref{fig_Android} sehen kann, gibt es zudem noch viele von Android mitgebrachte Bibliotheken wie SQLite (eine SQL Datenbank) oder OpenGL (eine 3-D-Grafikbibliothek). Bis zu den Android Versionen 4.x war die Dalvik VM ein Hauptbestandteil des Android Betriebssystem. Hierdurch wurde die geschriebenen Apps erst in Bytecode formatiert wenn sie auch wirklich gebraucht werden. Ab Android 5.x wurde dies durch den Ahead-of-time-Compiler ersetzt. Dieser übersetzt die Apps schon beim installieren in Bytecode-Format. Hierdurch wird sich bessere Performance und eine Beschleunigung von Apps erhofft ohne dabei Flexibilität verzichten zu müssen\cite{Dalvik}. Die Schicht Application-Framework stellt einem Entwickler die unterschiedlichsten Dienste zur Verfügung. Hierzu zählen viele Dienste, welche für eine Applikation die Infrastruktur zur Verfügung stellt, wie die Positionsermittlung, Sensoren, WLAN oder Telefoniefunktionen. Diese Schicht ist  für die Programmierung von Android Apps die wichtigste und daher auch  am gründlichsten Dokumentiert. Die oberste Schichte sind die Anwendungen. Diese sind teilweise schon vorinstalliert oder können heruntergeladen und installiert werden.
+Der Linux-Kernel dient als eine Abstraktion zwischen Software und Hardware und somit kann Android auf verschiedenen Geräten eingesetzt werden. Aufgrund der Tatsache, dass Linux über ein etabliertes Sicherheitskonzept verfügt \cite{LinuxSicherheitskonzept}, greift Android auf viele Schutzmechanismen des Linux Kernels zurück oder benutzt diese als ihre Basis\cite{scheid2012kapitel}. Zudem verwendet Android viele von Linux mitgebrachten Funktionen wie z.B. die Unterstützung für Speicherverwaltung, Power-Management und Netzwerkzugriff. Wie man in Abbildung \ref{fig_Android} sehen kann, gibt es zudem noch viele von Android mitgebrachte Bibliotheken wie SQLite (eine SQL Datenbank) oder OpenGL (eine 3-D-Grafikbibliothek). Bis zu den Android Versionen 4.x war die Dalvik VM ein Hauptbestandteil des Android Betriebssystem. Hierdurch wurde die geschriebenen Apps erst in Bytecode formatiert wenn sie auch wirklich gebraucht werden. Ab Android 5.x wurde dies durch den Ahead-of-time-Compiler ersetzt. Dieser übersetzt die Apps schon beim installieren in Bytecode-Format. Hierdurch wird sich bessere Performance und eine Beschleunigung von Apps erhofft ohne dabei Flexibilität verzichten zu müssen\cite{Dalvik}. Die Schicht Application-Framework stellt einem Entwickler die unterschiedlichsten Dienste zur Verfügung. Hierzu zählen viele Dienste, welche für eine Applikation die Infrastruktur zur Verfügung stellt, wie die Positionsermittlung, Sensoren, WLAN oder Telefoniefunktionen. Diese Schicht ist  für die Programmierung von Android Apps die wichtigste und daher auch  am gründlichsten Dokumentiert. Die oberste Schichte sind die Anwendungen. Diese sind teilweise schon vorinstalliert oder können heruntergeladen und installiert werden.
 
 
 \subsection{Android Update Problematik}\label{sec:Android Update Problematik}
@@ -82,7 +84,7 @@ Dieses Verfahren wird in Abbildung \ref{fig_Decrypter} gezeigt.
 \label{fig_Decrypter}
 \end{figure}
 
-\textbf{Metamorphie} hat die Bedeutung Verwandlung. Sollte nun nicht nur, wie in Abbildung \ref{fig_Decrypter} gezeigt ist, die Payload jedes mal geändert werden, sondern auch der Decrypter, spricht man von einem Methamorphosen Programm. Dies hat zur folge, dass der gesamte Quellcode nach jeder Replikation verändert ist. \cite{entpackermalware}
+\textbf{Metamorphie} hat die Bedeutung Verwandlung. Sollte nun nicht nur, wie in Abbildung \ref{fig_Decrypter} gezeigt ist, die Payload bei jeder Replikation geändert werden, sondern auch der Decrypter, spricht man von einem Methamorphosen Programm. Dies hat zur folge, dass der gesamte Quellcode nach jeder Replikation verändert ist. Trotz der gesammten Veränderung des Quellcodes funktioniert jede Version der Malware auf die selbse Art und Weise. Dies hat zur folge, dass signaturbasierte Malwareerkennung, welche in Kapitel \ref{sec:signaturbasierte Malwareerkennung} beschrieben wird, absolut keine Chance hat, neue Versionen der Malware zu erkennen.\cite{entpackermalware}
  
 Malware stellt wegen all dieser Verschleierungsmechanismen eine immer größer werdende Bedrohung dar und durch den rasanten Wachstum des Smartphone-Marktes ist eine manuelle Auswertung mittlerweile unmöglich geworden. Obwohl es sich bei vielen neuen Arten um verschiedene Varianten bereits bekannter Malware handelt, müssen Analysten erst jedes Sample erneut analysieren um dies feststellen zu können \cite{trinius2010visualisierung}. Bei der Analyse kann grundsätzlich in zwei Arten unterschieden werden: Statische und Dynamische Analyse (siehe Kapitel \ref{sec:Statische Analyse} und \ref{sec:Dynamische Analyse}).
 
@@ -116,8 +118,8 @@ Durch eine dynamische Analyse können durch die Ausführung des Programmes konkr
 
 \section{Erkennungsmechanismen}
 
-\subsection{signaturbasierte Malwareerkennung}
-Die am meisten Vertretene Methode der Malwareerkennung ist die auf Signatur basierte Erkennung von Malware. Diese Methode basiert auf der statischen Analyse \ref{sec:Statische Analyse} und extrahiert aus einem potentiellen Malware-Programm eine eindeutige Byte-Folge , welche als eindeutige Identifikation und Signatur dient, und vergleicht diese mit allen verfügbaren Signaturen in der Erkennungssoftware Datenbank. Wird diese Signatur in einem anderen Programm gefunden, kann mit einer hohen Sicherheit davon ausgegangen werden, dass das Programm schädliche Komponenten enthält. Der erste große Nachteil dabei ist, dass nur bereits bekannte  Malwarearten gefunden werden können, zudem ist das Gerät in der gesamten Zeit in der die Signaturen verglichen werden gegen Angriffe ungeschützt. \cite{Lehner2006}
+\subsection{signaturbasierte Malwareerkennung}\label{sec:signaturbasierte Malwareerkennung}
+Die am meisten Vertretene Methode der Malwareerkennung ist die auf Signatur basierte Erkennung von Malware. Diese Methode basiert auf der statischen Analyse \ref{sec:Statische Analyse} und extrahiert aus einem potentiellen Malware-Programm eine eindeutige Byte-Folge , welche als eindeutige Identifikation und Signatur dient, und vergleicht diese mit allen verfügbaren Signaturen in der Erkennungssoftware Datenbank. Wird diese Signatur in einem anderen Programm gefunden, kann mit einer hohen Sicherheit davon ausgegangen werden, dass das Programm schädliche Komponenten enthält. Diese Methode ist unverzichtbar bei jeder Antivirus Software, denn durch diese Verfahren wird ein sehr großer Teil der Schädlichen Software gefunden und gefiltert. Der erste große Nachteil dabei ist, dass nur bereits bekannte  Malwarearten gefunden werden können. Gegen Polymoprhie oder Metamorphie hat dieses Verfahren absolut keine Chance. Zudem ist das Gerät in der gesamten Zeit in der die Signaturen verglichen werden gegen Angriffe ungeschützt. \cite{Lehner2006}
 
 
 
@@ -137,9 +139,18 @@ Die heuristische Analyse ähnelt sehr dem signaturbasiertem Ansatz, aber im Gege
 Dabei gibt es zwei verschieden Ansätze der heuristische Analyse, die statische und die dynamische Analyse. Bei der statischen Heuristik wird wie auch bei dem signaturbasiertem Ansatz nach Byte-Folgen im Quellcode gesucht, allerdings ist hier der entscheidende Unterschied, dass hier nach bestimmten Abfolgen von Instruktionen gesucht wird. Die Byte-Folge setzt sich somit aus bestimmten Instruktionen zusammen und diese beschreibt dann das  Verhalten des Programmes. Zudem wird untersucht, ob verschlüsselte Malware bestimmte Systemfunktionen aufruft, um den eigenen Programmcode zu entschlüsseln. Durch diese Technik wird, wie alle bei jeder signaturbasierten Analyse, nur bereits bekannte oder verwandte Malware gefunden. Auch bei verschleierter Malware, wie bei polymorpher oder
 metamorpher Malware \ref{sec:Malware} versagt die statische heuristische Analyse. Bei der dynamischen Heuristik wird das zu untersuchende Programm in einer virtuellen Umgebung gestartet. Dadurch können z.B. z.B. alle Interrupt- Aufrufe, die das verdächtige Programm an das Betriebssystem schickt überwacht und erfasst werden. Es wird erlaubt, dass sich das Programm frei im emulierten Raum bewegen kann. Somit wird spätesten bei der kommunikation mit dem Betriebssystem klar, welche Absichten das Programm hat. Zudem können alle Schritte des Programmes überwacht werden, wie z.B. die Entschlüsselungsschritte. Zudem kann der entschlüsselte Quellcode des Programmes betrachtet werden. Durch dieses Verfahren kann somit auch noch unbekannte Malware gefunden werden. Da alles in einer simulierten Umgebung läuft, kann das infizierte Programm auch keine Schäden anrichten. Ein großer Nachteil dabei ist allerdings, dass diese Methode sehr Zeit intensiv ist. \cite{Lehner2006}
 
+\subsection{Taint Analysis}
+Die Taint-Analyse ist die Analyse und Erkennung von Datenflüssen, von
+privaten Datenquellen zu öffentlichen Datensenken. Viele der heutigen Malware verwendet einfache Mechanismen in einer Komponente um unerwünschte private Daten, den sogenannten Leaks, weiterzugeben. Diese sind mit relativ geringem Aufwand aufzudecken. Werden diese privaten Daten jedoch über mehrere Komponenten und Applikationen hinweg übergeben, ist es nicht mehr so einfach diese zu erkennen. Die Weitergabe von privaten Daten zwischen Applikationen ist, etwa im klassischen Sinne, als Rechteausweitung (privilege escalation) bekannt. Durch die Weitergabe der Daten ist keine direkte Verbindung zwischen privater Datenquelle und öffentlicher Senke zu erkennen. Für eine Erkennung eines solchen Leaks müssen intelligente Datenfluss- und Kommunikationstools verwendet werden. Zuerst müssen jedoch die Quellen und Senken richtig klassifiziert werden. Als Quelle wird der Ursprung privater Daten wie z.B. Standort des Gerätes oder Telefonbuchdaten bezeichnet. Allerdings sind nicht alle Daten private Daten. Öffentlich zugängliche Daten werden als öffentliche Quelle bezeichnet. Auch Senken werden mit diesem Prinzip klassifiziert. Jede Applikation hat auf Android ihren eigenen Speicherbereich. Endet eine Senke in einem solchen Speicherbereich wird diese als private Senke bezeichnet. Endet sie dagegen in einem nicht vertrauenswürdige Speicherbereiche, wie z.B. in einer SD-Karte oder in einem Netzwerk-Socket, also einem Speicherbereich außerhalb des Einflusses der Applikation, wird diese als öffentliche Senke bezeichnet. Ein Datenfluss ist nur dann tainted, also beschmutzt, wenn der Fluss in einer privaten Quelle startet und in einer öffentlichen Senke endet. \cite{Arzt:2014:FPC:2666356.2594299} Wichtig dabei ist zu erkennen, welche Aliase eine Variable annimmt. Dies Zeigt das folgende Codebeispiel \ref{fig_flowdroid}.
 
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=8.5cm]{AliasFlow}
+\caption{Taint Analysis ~\cite{flowdroid}}
+\label{fig_flowdroid}
+\end{figure}
 
-\section{Bouncer} \label{sec:Bouncer}
+Hier wird zuerst Untersucht, ob es eine Verbindung zwischen der private Quelle und der öffentliche Senke gibt. Als erstes wird jede Zeile nacheinander analysiert. Bei Nummer 1 wird dann eine private Datenquelle erkannt und somit beginnt die backwards oder auch rückwärts Analyse. Ab dort werden die Statements in der umgekehrten Reihenfolge analysiert und es wird erkannt, dass z.g.f, a.g.f und b.f Aliase von x.f sind. Somit wird erkannt, dass eine Verbindung zwischen Quelle und Sinke besteht und wird deshalb als tainted markiert.
 
 \section{Fazit}
 Durch den rasanten Wachstum des Smartphone-Marktes und die Einbindung von Smartphones in die  kommerziellen Nutzung wird auch in der Zukunft dies ein attraktives Ziel für Angreifer bleiben. Daraus kann man schließen, dass immer komplexere und raffiniertere Verschleierungsmechanismen entwickelt werden. Da allerdings auch die Entwickler der Erkennungssoftware stets ihr Produkte weiterentwickeln, gibt es zum heutigen Entwicklungsstand keine Malware die absolut nicht erkennbar ist. Allerdings gibt es noch kein Erkennungsprogramm, welches in der Lage ist, alle der verschiedenen Verschleierungsmechanismen zu erkennen. Um ein möglichst sicheres Ergebnis zu erlangen müssen viele der hier vorgestellten Verfahren auf die zu untersuchende Software angewandt werden. Dies ist durch den rasanten Wachstum des App-Stores leider nicht möglich. Es gibt einige gute Ansätze, aber es wird immer Malware geben, welche aus Grund fehlender Zeit nicht entdeckt wird.
@@ -149,13 +160,6 @@ Durch den rasanten Wachstum des Smartphone-Marktes und die Einbindung von Smartp
 
 
 %% --------------------------------------------------------------------
-
-\section*{Abkürzungen}
-\addcontentsline{toc}{section}{Abkürzungen}
-
-\begin{acronym}
-\acro{A}{Platzhalter für spätere Acronyme}
-\end{acronym}
 
 %Abbildungsverzeichnis
 \addcontentsline{toc}{section}{Abbildungen}
